# tokemak-quant-project

./: .env.example  README.md  pyproject.toml
data/: uni_v2_sushi_pools.csv
tokemak_quant_project/: example.py
